resources/snippetpanel/snippetpanel.css
* {
    box-sizing: border-box;
}
body {
    font-family: sans-serif;
    color: var(--vscode-editor-foreground);
}

/* Style the tab */
.tab {
    margin: 0;
    margin-bottom: 0.5rem;
    padding: 0;
    border: 0;
    color: var(--vscode-list-inactiveSelectionBackground);
    width: 100%;
}

/* Style the buttons inside the tab */
.tab button {
    display: inline-block;
    background-color: inherit;
    color: var(--vscode-list-inactiveSelectionForeground);
    padding: 0.2em 1em;
    border: none;
    border-bottom: var(--vscode-editor-background) 1px solid;
    outline: none;
    text-align: left;
    cursor: pointer;
    transition: 0.3s;
    font-size: 1.2rem;
    position: relative;
}

/* Change background color of buttons on hover */
.tab button:hover {
    border-bottom: var(--vscode-settings-dropdownListBorder) 1px solid;
}

/* Create an active/current "tab button" class */
.tab button.active {
    color: var(--vscode-list-activeSelectionForeground);
    border-bottom: var(--vscode-list-activeSelectionForeground) 1px solid;
}

/* Style the tab content */
.tabcontent {
    float: left;
    padding: 0px 12px;
    border: 0;
    width: 100%;

    min-width: 12rem;
    border-left: none;
    height: 300px;
}

.tex,
.latex {
    line-height: 1;
    margin-left: 0.02em;
}
.tex sub,
.latex sub,
.latex sup {
    text-transform: uppercase;
}
.tex sub,
.latex sub {
    vertical-align: -0.28ex;
    margin-left: -0.1667em;
    margin-right: -0.1em;
}
.tex,
.latex,
.tex sub,
.latex sub {
    font-size: 1em;
}
.latex sup {
    font-size: 0.85em;
    vertical-align: 0.2em;
    margin-left: -0.32em;
    margin-right: -0.15em;
}

span.tt {
    font-family: monospace;
}
span.rm {
    font-family: serif;
}
span.sf {
    font-family: sans-serif;
}

small {
    font-weight: 700;
    opacity: 0.4;
    line-height: 1.5;
}

select {
    height: 1.5rem;
    padding: 0rem 0.4rem;
    margin: 0.3rem 0.5rem 0.3rem 0.1rem;
    font-size: 1rem;
    border: none;
    background-color: var(--vscode-input-background);
    color: var(--vscode-input-foreground);
    outline: 1px solid var(--vscode-input-background);
}
select:hover {
    outline: 1px solid var(--vscode-inputOption-activeBorder);
}
select:focus {
    outline: 1px solid var(--vscode-inputOption-activeBorder);
}

input[type='text'] {
    background-color: var(--vscode-input-background);
    color: var(--vscode-input-foreground);
    outline: 1px solid var(--vscode-input-background);
    border: none;
    height: 1.5rem;
    padding: 0.2rem 0.4rem;
    margin: 0.3rem 0.5rem 0.3rem 0.1rem;
    font-size: 0.9rem;
    line-height: 1rem;
}
input[type='text']::placeholder {
    color: var(--vscode-input-placeholderForeground);
}
input[type='text']:hover {
    outline: 1px solid var(--vscode-inputOption-activeBorder);
}

#Symbols {
    max-width: 32rem;
}

#Symbols .header {
    display: block;
}

#Symbols .header input[type='text'] {
    display: inline-block;
}
#Symbols .header select {
    display: inline-block;
}

#Symbols .grid {
    display: flex;
    align-items: baseline;
    flex-wrap: wrap;
    justify-content: space-between;
}

#Symbols .grid div {
    display: inline-block;
    position: relative;
    min-width: 2ex;
}

#Symbols .grid div:last-child {
    margin-right: auto;
}

#Symbols .grid div svg {
    padding: 0.2rem;
    zoom: 2.5;
    transition-property: transform;
    transition-duration: 0.2s;
}

#Symbols .grid div svg.shrink {
    zoom: 1.6;
}

#Symbols .grid div:hover svg {
    color: var(--vscode-list-warningForeground);
    transform: scale(1.15);
}

#Tikz h3 {
    line-height: 2;
    margin: 0;
    padding: 0;
}
#Tikz a.cmd {
    display: block;
    font-size: 0.95rem;
    line-height: 1.4;
    margin-left: 0.3em;
    font-stretch: 200%;
    letter-spacing: 0.05em;
    opacity: 0.8;
}
#Tikz a.cmd::after {
    content: attr(data-description);
    margin-left: 1em;
    float: right;
    color: var(--vscode-editor-foreground);
    opacity: 0.7;
    font-size: 0.9em;
    font-family: sans-serif;
    font-weight: 400;
    letter-spacing: 0em;
}
#Tikz svg {
    height: 0.9em;
    width: 0.9em;
    display: inline-block;
    opacity: 0.7;
    margin-left: -1.1em;
    margin-right: -0.1em;
    stroke: var(--vscode-textLink-foreground);
    color: var(--vscode-textLink-foreground);
}
#Tikz .widesvg svg {
    height: 0.9em;
    width: 1.8em;
}

#Tikz svg + a {
    display: inline-block !important;
    width: calc(100% - 0.3em);
}
#Tikz .widesvg svg + a {
    width: calc(100% - 1.2em);
}
#Tikz .col {
    width: 30%;
    min-width: 10em;
    display: inline-block;
    vertical-align: top;
}

